Updated to use new spacing token & label spacing fix

--- a/packages/react/src/components/Typography/Detail/Detail.module.css
+++ b/packages/react/src/components/Typography/Detail/Detail.module.css
@@ -3,6 +3,6 @@
 }
 
 .detail.spacing {
-  margin-bottom: var(--fds-spacing-medium);
+  margin-bottom: var(--fds-spacing-5);
 }
 
