--- a/packages/react/src/components/Typography/ErrorMessage/ErrorMessage.module.css
+++ b/packages/react/src/components/Typography/ErrorMessage/ErrorMessage.module.css
@@ -4,7 +4,7 @@
 }
 
 .errorMessage.spacing {
-  margin-bottom: var(--fds-spacing-medium);
+  margin-bottom: var(--fds-spacing-5);
 }
 
 .errorMessage.medium {
