--- a/packages/react/src/components/Typography/Ingress/Ingress.module.css
+++ b/packages/react/src/components/Typography/Ingress/Ingress.module.css
@@ -3,7 +3,7 @@
 }
 
 .spacing {
-  margin-bottom: var(--fds-spacing-medium);
+  margin-bottom: var(--fds-spacing-5);
 }
 
 .ingress.medium {
