--- a/packages/react/src/components/Typography/Label/Label.module.css
+++ b/packages/react/src/components/Typography/Label/Label.module.css
@@ -1,9 +1,10 @@
 .label {
+  display: inline-block;
   margin: 0;
 }
 
 .spacing {
-  margin-bottom: var(--fds-spacing-medium);
+  margin-bottom: var(--fds-spacing-5);
 }
 
 .label.large {
