--- a/packages/react/src/components/Typography/Paragraph/Paragraph.module.css
+++ b/packages/react/src/components/Typography/Paragraph/Paragraph.module.css
@@ -3,7 +3,7 @@
 }
 
 .spacing {
-  margin-bottom:var(--fds-spacing-small);
+  margin-bottom:var(--fds-spacing-4);
 }
 
 .paragraph.large {
